# pragtical

./: .busted  .gitignore  .gitmodules  .luacov  CMakeLists.txt  LICENSE  README.md  build-packages.sh  changelog.md  meson.build  meson_options.txt  test_tags.lua
scripts/lua/tests/languages/samples/: .htaccess  001_r.r  002_angelscript.asc  003_risc_v_assembly.s  004_x86_assembly.asm  005_autohotkey.ahk  006_awk_script.awk  007_batch.bat  008_bend.bend  009_bibtex.bib  010_blade.b  011_blueprint.blp  012_brainfuck.bf  013_buzz.buzz  014_c.c  015_cel7.c7  017_carbon.carbon  018_clojure.clj  019_cmake.cmake  020_c.cpp  021_c.cs  022_css.css  023_cue.cue  024_d.d  025_dart.dart  026_diff.patch  027_freefem.edp  028_ejs.ejs  029_elixir.exs  031_elm.elm  032_language_env.env  033_html_eruby.html.erb  034_fe.fe  035_fennel.fnl  036_fortran.f90  038_gabc.gabc  039_gdscript.gd  040_glsl.glsl  041_gemtext.gmi  042_go.go  (+82 more)
src/: CMakeLists.txt  ffiexports.c  main.c  main_com.c  meson.build  papi.h  renatlas.c  renatlas.h  renatlas_surface.c  renbackend.c  renbackend.h  renbackend_sdlgpu.c  renbackend_sdlgpu.h  renbackend_sdlrenderer.c  renbackend_sdlrenderer.h  renbackend_surface.c  renbackend_surface.h  rencache.c  rencache.h  renderer.c  renderer.h  renwindow.c  renwindow.h  system_events.c  system_events.h  unidata.h  utfconv.h
src/api/: CMakeLists.txt  api.c  api.h  canvas.c  channel.c  channel.h  diff.c  dirmonitor.c  encoding.c  net.c  process.c  regex.c  renderer.c  renwindow.c  shmem.c  system.c  system_events.h  thread.c  tokenizer.c  utf8.c
src/api/dirmonitor/: CMakeLists.txt  dummy.c  fsevents.c  inodewatcher.cpp  inotify.c  kqueue.c  win32.c
src/api/utils/: lxlauxlib.c  lxlauxlib.h
src/compat/: CMakeLists.txt  compat-5.3.c  compat-5.3.h  ljbitlib.c  lprefix.h
src/renderer/: atlas.c  atlas.h  atlas_surface.c  backend.c  backend.h  cache.c  cache.h  renderer.c  renderer.h  window.c  window.h
src/renderer/backend/: sdlgpu.c  sdlgpu.h  sdlrenderer.c  sdlrenderer.h  surface.c  surface.h
src/renderer/shaders/: gpu_canvas.frag.dxil.h  gpu_canvas.frag.spv.h  gpu_canvas.vert.dxil.h  gpu_canvas.vert.msl.h  gpu_canvas.vert.spv.h  gpu_canvas_batch.frag.msl.h  gpu_canvas_batch.vert.dxbc.h  gpu_canvas_batch.vert.msl.h  gpu_canvas_batch.vert.spv.h  gpu_poly.frag.dxbc.h  gpu_poly.frag.dxil.h  gpu_poly.frag.msl.h  gpu_poly.vert.dxbc.h  gpu_rect.frag.dxbc.h  gpu_rect.frag.dxil.h  gpu_rect.frag.spv.h  gpu_rect.vert.dxil.h  gpu_rect.vert.spv.h  gpu_text.vert.msl.h  gpu_text.vert.spv.h  gpu_text_batch.frag.dxbc.h  gpu_text_batch.frag.dxil.h  gpu_text_batch.frag.spv.h  gpu_text_batch.vert.dxil.h
src/shaders/: gpu_canvas.frag.dxbc.h  gpu_canvas.frag.msl.h  gpu_canvas.vert.dxbc.h  gpu_canvas_batch.frag.dxbc.h  gpu_canvas_batch.frag.dxil.h  gpu_canvas_batch.frag.spv.h  gpu_canvas_batch.vert.dxil.h  gpu_poly.frag.dxbc.h  gpu_poly.frag.dxil.h  gpu_poly.frag.msl.h  gpu_poly.frag.spv.h  gpu_poly.vert.dxbc.h  gpu_poly.vert.dxil.h  gpu_poly.vert.msl.h  gpu_poly.vert.spv.h  gpu_rect.frag.msl.h  gpu_rect.vert.dxbc.h  gpu_rect.vert.msl.h  gpu_rect.vert.spv.h  gpu_text.frag.dxbc.h  gpu_text.frag.dxil.h  gpu_text.frag.msl.h  gpu_text.frag.spv.h  gpu_text.vert.dxbc.h  gpu_text.vert.dxil.h  gpu_text_batch.frag.dxbc.h  gpu_text_batch.frag.dxil.h  gpu_text_batch.frag.msl.h  gpu_text_batch.frag.spv.h  gpu_text_batch.vert.dxbc.h  gpu_text_batch.vert.msl.h  gpu_text_batch.vert.spv.h
src/tokenizer/: arena.c  arena.h  lutf8.c  lutf8.h  regex.c  regex.h
src/windows/: darkmode.c  darkmode.h
subprojects/packagefiles/fontconfig/: meson.build
subprojects/packagefiles/linenoise/: README.md  linenoise.c  meson.build  meson_options.txt
subprojects/packagefiles/luajit/: 001-luajit-unicode.diff  002-ARM64-Support-mcode-allocation-more-than-127MB-away-.patch  002-arm64-mcode-allocation-fix.patch  003-Support-placing-JIT-code-outside-of-jump-range-from-.patch  meson.build  meson_options.txt
subprojects/packagefiles/luajit/src/: luajit_relver.txt.in  meson.build
subprojects/packagefiles/luajit/src/host/: meson.build
subprojects/packagefiles/mbedtls/: meson.build
subprojects/packagefiles/plugins/: meson.build
subprojects/packagefiles/ppm/: build.sh  meson.build  meson_options.txt
subprojects/packagefiles/sdl2/: find-dylib-name.py  meson.build  meson_options.txt
subprojects/packagefiles/sdl2/include/: meson.build
subprojects/packagefiles/sdl2/src/: meson.build
subprojects/packagefiles/sdl2/src/atomic/: meson.build
subprojects/packagefiles/sdl2/src/audio/: meson.build
subprojects/packagefiles/sdl2/src/core/: meson.build
subprojects/packagefiles/sdl2/src/cpuinfo/: meson.build
subprojects/packagefiles/sdl2/src/dynapi/: meson.build
subprojects/packagefiles/sdl2/src/events/: meson.build
subprojects/packagefiles/sdl2/src/file/: meson.build
subprojects/packagefiles/sdl2/src/filesystem/: meson.build
subprojects/packagefiles/sdl2/src/haptic/: meson.build
subprojects/packagefiles/sdl2/src/hidapi/: meson.build
subprojects/packagefiles/sdl2/src/joystick/: meson.build
subprojects/packagefiles/sdl2/src/libm/: meson.build
subprojects/packagefiles/sdl2/src/loadso/: meson.build
subprojects/packagefiles/sdl2/src/locale/: meson.build
subprojects/packagefiles/sdl2/src/main/: meson.build
subprojects/packagefiles/sdl2/src/misc/: meson.build
subprojects/packagefiles/sdl2/src/power/: meson.build
subprojects/packagefiles/sdl2/src/render/: meson.build
subprojects/packagefiles/sdl2/src/sensor/: meson.build
subprojects/packagefiles/sdl2/src/stdlib/: meson.build
subprojects/packagefiles/sdl2/test/: meson.build
subprojects/packagefiles/sdl2/wayland-protocols/: meson.build
subprojects/packagefiles/sdl3/: meson.build
subprojects/packagefiles/sdl3_image/: meson.build
subprojects/packagefiles/sdl3_image/src/: meson.build
subprojects/packagefiles/sdl3_net/: meson.build
subprojects/packagefiles/uchardet/: meson.build  meson_options.txt
subprojects/packagefiles/uchardet/src/: meson.build
subprojects/packagefiles/uchardet/test/: meson.build
(+364 files in other folders)
